--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
     "morgan": "~1.9.1",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "pg": "^7.18.1",
     "pg-hstore": "^2.3.3",
     "pug": "2.0.0-beta11",
